background height: 100% should fix whitespace on mobile devices

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -79,7 +79,8 @@ body {
   background-size: cover;
   margin: 0;
   width: 100%;
-  height: 200%;
+  overflow: hidden;
+  height: 100%;
 }
 
 /**
